--- a/src/Actions.Test.Site.Api/Actions.Test.Site.Api.csproj
+++ b/src/Actions.Test.Site.Api/Actions.Test.Site.Api.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Actions.Test.Site.Application\Actions.Test.Site.Application.csproj" />
+    <ProjectReference Include="..\Actions.Test.Site.Infrastructure\Actions.Test.Site.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
