--- a/src/Actions.Test.Site.Application/Actions.Test.Site.Application.csproj
+++ b/src/Actions.Test.Site.Application/Actions.Test.Site.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
   </ItemGroup>
 
   <ItemGroup>
